--- a/to-do-tarefas-01-2025-arthur/web/css/style.css
+++ b/to-do-tarefas-01-2025-arthur/web/css/style.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 header {
-    background-color: #0056b3; /* Cor de fundo do cabeçalho */
+    background-color: red; /* Cor de fundo do cabeçalho */
     padding: 10px 0; /* Espaçamento interno do cabeçalho */
 }
 
@@ -63,7 +63,7 @@ nav ul li a:hover {
 }
 
 button {
-    background-color: #0056b3;
+    background-color: red;
     color: white;
     border: none;
     padding: 8px 12px;
@@ -73,7 +73,7 @@ button {
 }
 
 button:hover {
-    background-color: #003d80;
+    background-color: pink;
 }
 
 input[type="text"], input[type="email"], select {
